--- a/Beranda.html
+++ b/Beranda.html
@@ -31,7 +31,13 @@
                   
                     <li><a href="About.html">About</a></li>
                     <li><a class="button" href="Login.html">Sign In</a></li>
-                    <li><a class="button" href="Login.html">Join</a></li>
+                    <li><a class="button" href="Login.html">Join</a>
+                    <ul>
+                            <li><a href="register-teacher.html">TEACHER</a></li>
+                            <li><a href="register-student.html">STUDENT</a></li>
+                            
+                        </ul>
+                        </li>
                 </ul>
             </div>
         </div>
