--- a/private.html
+++ b/private.html
@@ -43,6 +43,8 @@
         <div class="private" style="align-items: center; text-align: center;">
             <h3 style="margin-left: 0">Sri Indah</h3>
             <a href="editguru.html"><img src="img/2.jpg" alt="Gambar gagal dimuat"></a>
+            <br>
+            <a class="button" href="tambahguru.html">Tambah Guru</a>
         </div>
 
        
