--- a/group.html
+++ b/group.html
@@ -43,6 +43,8 @@
         <div class="private" style="align-items: center; text-align: center;">
             <h3 style="margin-left: 0">Group Matematika</h3>
             <a href="editgroup.html"><img src="img/matematika.jpg" alt="Gambar gagal dimuat"></a>
+            <br>
+            <a class="button" href="tambahgrup.html">Tambah Group</a>
         </div>
 
        
