--- a/bimbel.html
+++ b/bimbel.html
@@ -43,6 +43,8 @@
         <div class="private" style="align-items: center; text-align: center;">
             <h3 style="margin-left: 0">Ganesha Operation</h3>
             <a href="editbimbel.html"><img src="img/bimbel.jpeg" alt="Gambar gagal dimuat"></a>
+            <br>
+            <a class="button" href="tambahbimbel.html">Tambah Bimbel</a>
         </div>
        
     </div>
