--- a/about-user.html
+++ b/about-user.html
@@ -18,21 +18,18 @@
                     <a href="#"><b> i S m a r t </b></a>
                 </div>
                <ul class="right-menu">
-                    <li><a href="Beranda.html">Home</a></li>
-                    <li><a href="Program.html">Program</a>
+                    <li><a href="Beranda-user.html">Home</a></li>
+                    <li><a href="#">Program</a>
                         <ul>
-                            <li><a href="private-umum.html">PRIVATE</a></li>
-                            <li><a href="group-umum.html">GROUP</a></li>
-                            <li><a href="bimbel-umum.html">BIMBEL</a></li>
-                            <li><a href="promo-umum.html">PROMO</a></li>
+                            <li><a href="private-user.html">PRIVATE</a></li>
+                            <li><a href="group-user.html">GROUP</a></li>
+                            <li><a href="bimbel-user.html">BIMBEL</a></li>
+                            <li><a href="promo-user.html">PROMO</a></li>
                         </ul>
                     </li>
                   
-                    <li><a href="About.html">About</a></li>
-                    <li><a class="button" href="Login.html">Sign In</a></li>
-                    <li><a class="button" href="register-student.html">Join</a>
-                    
-                        </li>
+                    <li><a href="#">About</a></li>
+                    <li><a class="button" href="Login.html">Log Out</a></li>
                 </ul>
             </div>
         </div>
