--- a/admintambahpromo.html
+++ b/admintambahpromo.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/admineditprogram.css">
   <link rel="stylesheet" type="text/css" href="css/Beranda.css">
    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+   <link rel="stylesheet" type="text/css" href="program.css">
 
 </head>
 <body>
@@ -30,24 +31,19 @@
                 </ul>
             </div>
         </div>
-         <div class="big-text"> <b>i S m a r t</b>
-            <h1>By Getting Knowledge</h1>
-        </div>
+        
     </header>
 
     <div class="produk-box">
     <br>
-      <form name="formproduk" action="bimbel.html" onsubmit="return formvalidasi()">
-          <label>Nama Bimbel</label>
-          <input type="text" name="nama" placeholder="Nama Bimbel" />
+      <form name="formproduk" action="private.html" onsubmit="return formvalidasi()">
+          <label>Nama</label>
+          <input type="text" name="nama" placeholder="Nama Program" />
 
-          <label>Alamat Bimbel</label>
-          <input type="text" name="alamat" placeholder="Alamat" />
+          <label>Jenis</label>
+          <input type="text" name="jenis" placeholder="Jenis Promo" />
 
-          <label>Harga Bimbel</label>
-          <input type="text" name="harga" placeholder="Harga setiap tahun" />
-
-          <label>Foto Bimbel</label>
+          <label>Foto Program</label>
           <input type="file" name="foto" />
           <input type="submit" value="Simpan">
       </form>
@@ -58,26 +54,21 @@
       function formvalidasi() {
       
          if( document.formproduk.nama.value == "" ) {
-            alert( "Nama Tidak Boleh Kosong!" );
+            alert( "Nama Guru Tidak Boleh Kosong!" );
             document.formproduk.nama.focus() ;
             return false;
          }
-         if( document.formproduk.alamat.value == "" ) {
-            alert( "Alamat Tidak Boleh Kosong!" );
+         if( document.formproduk.jenis.value == "" ) {
+            alert( "Jenis Tidak Boleh Kosong!" );
             document.formproduk.alamat.focus() ;
             return false;
-         }
-         if( document.formproduk.harga.value == "" ) {
-            alert( "Harga Tidak Boleh Kosong!" );
-            document.formproduk.harga.focus() ;
-            return false;
-         }
+        }
          if( document.formproduk.foto.value == "" ) {
             alert( "Foto Belum diUpload!" );
             document.formproduk.foto.focus() ;
             return false;
          }
-         return alert('Profil Bimbel Berhasil diUbah!');
+         return alert('Promo Berhasil ditambahkan!');
       }
     </script>
 </html>
