--- a/about-admin.html
+++ b/about-admin.html
@@ -21,18 +21,15 @@
                     <li><a href="Beranda.html">Home</a></li>
                     <li><a href="Program.html">Program</a>
                         <ul>
-                            <li><a href="private-umum.html">PRIVATE</a></li>
-                            <li><a href="group-umum.html">GROUP</a></li>
-                            <li><a href="bimbel-umum.html">BIMBEL</a></li>
-                            <li><a href="promo-umum.html">PROMO</a></li>
+                            <li><a href="private.html">PRIVATE</a></li>
+                            <li><a href="group.html">GROUP</a></li>
+                            <li><a href="bimbel.html">BIMBEL</a></li>
+                            <li><a href="promo.html">PROMO</a></li>
                         </ul>
                     </li>
                   
-                    <li><a href="About.html">About</a></li>
-                    <li><a class="button" href="Login.html">Sign In</a></li>
-                    <li><a class="button" href="register-student.html">Join</a>
-                    
-                        </li>
+                    <li><a href="#">About</a></li>
+                    <li><a class="button" href="Login.html">Log Out</a></li>
                 </ul>
             </div>
         </div>
