--- a/group-user.html
+++ b/group-user.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Grup Admin</title>
+  <title>Grup User</title>
   <link rel="stylesheet" type="text/css" href="program.css">
+  <link rel="stylesheet" type="text/css" href="popup.js">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
 <body>
@@ -13,16 +14,16 @@
                   <a href="#"> <b> i S m a r t </b></a>
                 </div>
                 <ul class="right-menu">
-                    <li><a href="Beranda.html">Beranda</a></li>
+                    <li><a href="Beranda-user.html">Beranda</a></li>
                     <li><a href="#">Program</a>
                         <ul>
-                            <li><a href="private.html">PRIVATE</a></li>
-                            <li><a href="group.html">GROUP</a></li>
-                            <li><a href="bimbel.html">BIMBEL</a></li>
-                            <li><a href="promo.html">PROMO</a></li>
+                            <li><a href="private-user.html">PRIVATE</a></li>
+                            <li><a href="group-user.html">GROUP</a></li>
+                            <li><a href="bimbel-user.html">BIMBEL</a></li>
+                            <li><a href="promo-user.html">PROMO</a></li>
                         </ul>
                     </li>
-                   <li><a href="about-admin.html">About</a></li>
+                   <li><a href="about-user.html">About</a></li>
                     <li><a class="button" href="Login.html">Logout</a></li>
                    
                 </ul>
@@ -36,59 +37,65 @@
           <img src="matematika.jpg"> 
             <h4>Matematika</h4>           
             <h5>Jalan Panjaitan no 23</h5> 
-            <a class="tombol tombol-detail" href="detail-group.html">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a class="tombol tombol-detail" href="detail-group-us.html">Detail</a> 
+            <div id="closed"></div>
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>
+            <div class="popup-wrapper" id="popup">
+            <div class="popup-container">
+            <!-- Selamat Anda telah bergabung dengan Kelompok Minat ini.
+            <a class='popup-close' href='#closed'>X</a> -->
+            </div>
+            </div>  
         </div> 
         <div class="list-program">          
           <img src="grup1.jpg"> 
             <h4>Bahasa Inggris</h4>           
             <h5>Jalan Ahmad Yani no 171</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>   
         </div> 
         <div class="list-program">          
           <img src="grup2.jpg"> 
             <h4>Bahasa Mandarin</h4>           
             <h5>Jalan Gajah Mada no 78</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>  
         </div> 
         <div class="list-program">          
           <img src="grup3.png"> 
             <h4>Bahasa Jepang</h4>           
             <h5>Jalan Jawa no 9</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>   
         </div> 
         <div class="list-program">          
           <img src="grup4.png" > 
             <h4>Bahasa Korea</h4>           
             <h5>Jalan Gatot Subroto no 43</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>  
         </div> 
         <div class="list-program">          
           <img src="grup5.jpg"> 
             <h4>Minat Komputer</h4>           
-            <h5>Mutiara Plaza Jember II</h5> 
+            <h5>Mutiara Plaza Jember  II</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>  
         </div> 
         <div class="list-program">          
           <img src="grup6.gif"> 
             <h4>Minat IPA</h4>           
             <h5>Jalan Hayam Wuruk no 98</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>   
         </div> 
         <div class="list-program">          
           <img src="grup7.jpg"> 
             <h4>Minat IPS</h4>           
             <h5>Jalan PB Sudirman no 77</h5> 
             <a class="tombol tombol-detail" href="#">Detail</a> 
-            <a class="tombol tombol-beli" href="editgroup.html">Edit</a>   
+            <a href="#popup" class="tombol tombol-beli">JOIN</a>  
         </div> 
-        <a href="admintambahgroup.html"><button id="tambahgroup">Tambah</button></a>
   </div>
 
     <div style="margin-top:200px "></div>
