--- a/login-admin.html
+++ b/login-admin.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign In</title>
     <link rel="stylesheet" href="css/Login.css">
-    
    
-    <script src="js/Login.js"></script>
+   
+    <script src="js/login-admin.js"></script>
 </head>
 
 <body>
     <div class="login">
         <h2 class="login-admin"> <b> i S m a r t </b></h2>
-        <form class="login-isi" name="formlogin" action="Beranda-user.html" onSubmit="return validasi()" method="post">
+        <form class="login-isi" name="formlogin" action="Beranda.html" onSubmit="return validasii()" method="post">
             <p>
                 <input type="username" name="username" id="username" placeholder="Username">
             </p>
@@ -29,9 +29,7 @@
             <p>
                 <a href="Beranda-umum.html">Back To Home</a>
             </p>
-            <p>
-                <a href="login-admin.html">Login Admin</a>
-            </p>
+            
         </form>
     </div>
 </body>
